Fix edit bar and breadcrumbs being vertically off-center

--- a/src/onegov.town/onegov/town/theme/styles/town.scss
+++ b/src/onegov.town/onegov/town/theme/styles/town.scss
@@ -460,8 +460,8 @@ input[type=color] {
 */
 .edit-bar {
     background-color: $primary-color;
-    margin-bottom: .9rem;
-    margin-top: -1rem;
+    margin-bottom: .8rem;
+    margin-top: -1.2rem;
 
     button.tiny {
         margin-bottom: 0;
